syntax = "proto3";

package com.example.grpc.product;

message AccountProductMessage {
  string url = 1;
  string accountUuid = 2;
}

message ProductMessage {
  string url = 1;
  int32 actualPrice = 2;
  int32 pastPrice = 3;
  int64 updatedAt = 4;
}

message StringMessage {
  string string = 1;
}

message ProductListMessage {
  repeated ProductMessage products = 1;
}

message BooleanMessage {
  bool boolean = 1;
}

service ProductProtoService {
  rpc save(AccountProductMessage) returns (BooleanMessage);
  rpc getByUrl(StringMessage) returns (ProductMessage);
  rpc getAllByUrlAndAccountUuid(AccountProductMessage) returns (ProductListMessage);
}